--- a/Waiting/WebContent/index.html
+++ b/Waiting/WebContent/index.html
@@ -41,7 +41,7 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li class="active"><a href="index.html">Home22</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="works.html">Works</a></li>
@@ -67,7 +67,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <img class="img-fluid" src="assets/img/logo.png">		//로고
+      <img class="img-fluid" src="assets/img/logo.png">		<!--*****로고******-->
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
       </a>
@@ -81,14 +81,14 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Johan Stanworth</h2>
-            <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p>
+            <h2>Waiting One Click</h2>
+            <p class="mb-0">한번의 클릭으로 Waiting을 할 수 있습니다!</p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">Web</a>
-              <a href="#" data-filter=".design">Design</a>
+              <a href="#" data-filter=".web">카페</a>
+              <a href="#" data-filter=".design">음식점</a>
               <a href="#" data-filter=".branding">Branding</a>
               <a href="#" data-filter=".photography">Photography</a>
             </div>
@@ -101,7 +101,7 @@
                 <h3>Boxed Water</h3>
                 <span>Web</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_1.jpg">
+              <img class="img-fluid" src="assets/img/cafe.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -110,7 +110,7 @@
                 <h3>Build Indoo</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" src="assets/img/cafe2.jpg">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -119,7 +119,7 @@
                 <h3>Cocooil</h3>
                 <span>Branding</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_3.jpg">
+              <img class="img-fluid" src="assets/img/cafe3.jpg">
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
