--- a/Waiting/WebContent/index.html
+++ b/Waiting/WebContent/index.html
@@ -87,15 +87,15 @@
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">카페</a>
-              <a href="#" data-filter=".design">음식점</a>
-              <a href="#" data-filter=".branding">Branding</a>
-              <a href="#" data-filter=".photography">Photography</a>
+              <a href="#" data-filter=".cafe10">카페 top10</a>
+              <a href="#" data-filter=".food10">음식점 top10</a>
+              <a href="#" data-filter=".cafe">카페 All</a>
+              <a href="#" data-filter=".food">음식점 All</a>
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item cafe10 cafe col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Boxed Water</h3>
@@ -104,7 +104,7 @@
               <img class="img-fluid" src="assets/img/cafe.jpg">
             </a>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item cafe col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Build Indoo</h3>
@@ -113,7 +113,7 @@
               <img class="img-fluid" src="assets/img/cafe2.jpg">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item cafe10 cafe col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Cocooil</h3>
@@ -122,31 +122,58 @@
               <img class="img-fluid" src="assets/img/cafe3.jpg">
             </a>
           </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item cafe col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Build Indoo</h3>
+                <span>Photography</span>
+              </div>
+              <img class="img-fluid" src="assets/img/cafe4.jpg">
+            </a>
+          </div>
+          <div class="item cafe col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Build Indoo</h3>
+                <span>Photography</span>
+              </div>
+              <img class="img-fluid" src="assets/img/cafe5.jpg">
+            </a>
+          </div>
+          <div class="item cafe col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Build Indoo</h3>
+                <span>Photography</span>
+              </div>
+              <img class="img-fluid" src="assets/img/cafe6.jpg">
+            </a>
+          </div>
+          <div class="item food10 food col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Nike Shoe</h3>
                 <span>Design</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_4.jpg">
+              <img class="img-fluid" src="assets/img/음식1.jpg">
             </a>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item food10 food col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Kitchen Sink</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_5.jpg">
+              <img class="img-fluid" src="assets/img/음식2.jpg">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item food col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Amazon</h3>
                 <span>brandingn</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_6.jpg">
+              <img class="img-fluid" src="assets/img/음식.jpg">
             </a>
           </div>
         </div>
