--- a/Waiting/WebContent/index.html
+++ b/Waiting/WebContent/index.html
@@ -125,7 +125,7 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Nike Shoe</h3>
+                <h3>Nike Shoee</h3>
                 <span>Design</span>
               </div>
               <img class="img-fluid" src="assets/img/img_4.jpg">
