--- a/Waiting/WebContent/index.html
+++ b/Waiting/WebContent/index.html
@@ -73,8 +73,12 @@
       </a>
     </div>
   </nav>
+  
+  
 
   <main id="main">
+  
+ 
 
     <!-- ======= Works Section ======= -->
     <section class="section site-portfolio">
@@ -82,8 +86,9 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Waiting One Click</h2>
-            <p class="mb-0">한번의 클릭으로 Waiting을 할 수 있습니다!</p>
+            <p class="mb-0">한번의 클릭으로 에약을 할 수 있습니다!</p>
           </div>
+          
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
@@ -155,7 +160,7 @@
                 <h3>Nike Shoe</h3>
                 <span>Design</span>
               </div>
-              <img class="img-fluid" src="assets/img/음식1.jpg">
+              <img class="img-fluid" src="assets/img/음식.jpg">
             </a>
           </div>
           <div class="item food10 food col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -164,7 +169,7 @@
                 <h3>Kitchen Sink</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="assets/img/음식2.jpg">
+              <img class="img-fluid" src="assets/img/음식1.jpg">
             </a>
           </div>
           <div class="item food col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -173,7 +178,34 @@
                 <h3>Amazon</h3>
                 <span>brandingn</span>
               </div>
-              <img class="img-fluid" src="assets/img/음식.jpg">
+              <img class="img-fluid" src="assets/img/음식2.jpg">
+            </a>
+          </div>
+           <div class="item cafe col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Build Indoo</h3>
+                <span>Photography</span>
+              </div>
+              <img class="img-fluid" src="assets/img/음식3.jpg">
+            </a>
+          </div>
+           <div class="item cafe col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Build Indoo</h3>
+                <span>Photography</span>
+              </div>
+              <img class="img-fluid" src="assets/img/음식4.jpg">
+            </a>
+          </div>
+          <div class="item cafe col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Build Indoo</h3>
+                <span>Photography</span>
+              </div>
+              <img class="img-fluid" src="assets/img/음식5.jpg">
             </a>
           </div>
         </div>
